k8s/mern-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-client-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mern-client
    spec:
      containers:
        - name: mern-client
          image: xeoyounglee/mern_crud:client
          ports:
            - containerPort: 80
              name: http-port
  selector:
    matchLabels:
      app: mern-client
