k8s/mern-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-server-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mern-server
    spec:
      containers:
        - name: mern-server
          image: xeoyounglee/mern_crud:backend
          ports:
            - containerPort: 8080
              name: nodejs-port
  selector:
    matchLabels:
      app: mern-server
