k8s/mongodb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  volumes:
  - name: mongodb-vol
    persistentVolumeClaim:
      claimName: mongodb-pvc
  containers:
    - name: mongodb
      image: mongo:latest
      ports:
        - containerPort: 27017
          name: mongodb-port
      volumeMounts:
      - name: mongodb-vol
        mountPath: /data/db
