k8s/mern-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-client-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
  selector:
    app: mern-client
  type: LoadBalancer
