k8s/mern-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: mern-server
  type: LoadBalancer
